Fixed 100vh on mobile

--- a/src/components/game/style.scss
+++ b/src/components/game/style.scss
@@ -3,5 +3,6 @@
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     text-align: center;
 }
